# python-async-worker-svc

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
async_worker_svc/: logger.py  main.py  processor.py  pubsub.py  settings.py  types.py
scripts/: consume.py  publish.py
scripts/pubsub-init/: Dockerfile  configure.py  init.sh
tests/: test_processor.py
